style/style.css
/******************************/
/* HEADER */
/******************************/

.header {
  font-size: 1.6rem;
  display: flex;
  justify-content: space-between;
  padding: 2.4rem 4.8rem;
  cursor: pointer;
}

.header-title {
  text-transform: uppercase;
}

.main-nav-list {
  list-style: none;
  display: flex;
  gap: 4rem;
}

.nav-link:link,
.nav-link:visited {
  color: #495057;
  padding: 0.8rem 1.6rem;
  border-radius: 4px;
  transition: all 0.3s;
}

.nav-link:hover,
.nav-link:active {
  /* background-color: #dee2e6; */
  color: #2b8a3e;
}

/******************************/
/* HERO SECTION */
/******************************/

.section-hero {
  background-color: #ebfbee;
  padding: 1.2rem 2.4rem;
}

.hero-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 3rem;
  margin: 9.6rem auto;
  padding: 2.4rem;
}

.hero-text {
  align-self: center;
}

.hero-title {
  font-size: 7.4rem;
  letter-spacing: 0.05rem;
  font-weight: 700;
  color: #212529;
}

.hero-description {
  font-size: 2.4rem;
  margin-top: 2.4rem;
  line-height: 1.3;
  color: #343a40;
}

.hero-img {
  justify-self: end;
}

.hero-img img {
  max-width: 100%;
  border-radius: 6px;
}

.hero-link:link,
.hero-link:visited {
  display: inline-block;
  font-size: 2.4rem;
  margin-top: 9.6rem;
  padding: 1.2rem 2.4rem;
  color: #fff;
  background-color: #2f9e44;
  border-radius: 4px;
  transition: all 0.3s;
}

.hero-link:hover,
.hero-link:active {
  background-color: #2b8a3e;
}

.hero-link--contact:link,
.hero-link--contact:visited {
  display: inline-block;
  font-size: 2.4rem;
  padding: 1.2rem 2.4rem;
  margin-left: 4rem;
  color: #2f9e44;
  border-radius: 4px;
  transition: all 0.3s;
}

.hero-link--contact:hover,
.hero-link--contact:active {
  box-shadow: inset 0 0 0 3px #2b8a3e;
  color: #2b8a3e;
}

